Bugfix: Workspace directories with blanks are not handled correctly
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@11745 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: e5b2b361976ec1e86bf08e24b7beb7d64dbc1241